Sat May 24 08:13:34 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (rb_str_transcode): argc is 1, and argv is &to.

Fri May 23 17:55:11 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Be consistent with Array#slice()
	  and String#slice!().  Just return nil when a negative length or
	  out of boundary index is given instead of raising an exception
	  via internal functions.

Fri May 23 16:44:34 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (Init_Enumerator): Override
	  Enumerable::Enumerator#each_with_index with #with_index.

Fri May 23 12:23:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_num_t): moved form vm.h.

	* tool/instruction.rb (RubyVM::Instruction#sp_increase_c_expr),
	  tool/instruction.rb (RubyVM::VmBodyGenerator#make_header_operands):
	  omit unused variables.

Fri May 23 06:15:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): get rid of segv.

Fri May 23 02:29:14 2008  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_gt|ge|lt|le): use values directly to compare.

Fri May 23 01:15:09 2008  Koichi Sasada  <ko1@atdot.net>

	* eval.c, eval_intern.h, include/ruby/intern.h, include/ruby/ruby.h,
	  vm.c, vm_core.h, vm_insnhelper.c: remove pointless "const".

Thu May 22 23:45:17 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (get_destination_insn, get_next_insn, get_prev_insn):
	  peephole optimization should not ignore ISEQ_ELEMENT_ADJUST.

Thu May 22 20:20:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (check_dump_arg, check_load_arg): check if reentered.
	  [ruby-dev:34802]

Thu May 22 20:14:28 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* iseq.c (iseq_load, iseq_data_to_ary): support
	  ISEQ_TYPE_DEFINED_GUARD.

Thu May 22 19:01:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_get_ruby_level_cfp): moved from eval_intern.h.

	* vm.c (sdr, nsdr): define methods only if VMDEBUG is defined.
